# sustainable_europe

./: .gitignore  Cargo.toml  README.md
data/: 61_62_fixed.csv  6_1_6_2_undata.csv  target6_3.csv  target6_3fixed.csv
src/: main.rs
