[package]
name = "sustainable_europe"
version = "0.1.0"
authors = ["Nicolas Mohr <Nico.Mohr@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parsing
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.1"